--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -12,11 +12,11 @@
 
 
         <!-- todo preload right fonts, can we do this magically? -->
-        <link rel="preload" as="font" type="font/woff2" href="/fonts/Red_Hat_Display-400-latin20.woff2" />
-        <link rel="preload" as="font" type="font/woff2" href="/fonts/Red_Hat_Display-900-latin22.woff2" />
-        <link rel="preload" as="font" type="font/woff2" href="/fonts/Literata-400-latin12.woff2"/>
+        <link rel="preload" as="font" type="font/woff2" href="/fonts/Nunito-400-latin5.woff2" />
+        <link rel="preload" as="font" type="font/woff2" href="/fonts/Nunito-600-latin10.woff2" />
+        <link rel="preload" as="font" type="font/woff2" href="/fonts/Nunito-800-latin15.woff2"/>
 
-        <link rel="preload" media="print" href="/fonts/fonts.css?{{ assetHash }}" onload="this.media='all'"/>
+        <link rel="preload" as="style" media="print" href="/fonts/fonts.css?{{ assetHash }}" onload="this.media='all'"/>
 
         <style>
             {% include "css/critical.css" %}
