--- a/src/scss/components/_post-card.scss
+++ b/src/scss/components/_post-card.scss
@@ -7,6 +7,7 @@
         display: inline-flex;
         flex: 2;
         min-height: 7rem;
+        margin-bottom:0.5rem;
        h3 {
         position: relative;
         padding-bottom:1rem;
@@ -16,7 +17,7 @@
           position: absolute;
           bottom:0;
           left:0;
-          height: 0.2rem;
+          height: 0.15rem;
           width: 100%;
           background: var(--Primary);
         }
@@ -32,7 +33,7 @@
     .post-img-link {
       .overlay {
         z-index: 1;
-        background: linear-gradient(90deg, $dark-bg 0%, $dark-secondary 100%);
+        background: linear-gradient(90deg, $dark-primary 0%, $dark-secondary 100%);
         width: 100%;
         height: 100%;
         top: 0;
