--- a/src/scss/components/_toggle.scss
+++ b/src/scss/components/_toggle.scss
@@ -103,7 +103,7 @@ html.transition,
 html.transition *,
 html.transition *:before,
 html.transition *:after {
-    transition: all 300ms !important;
+    transition: background-color 250ms linear,fill 250ms linear !important;
     transition-delay: 0ms !important;
 }
 
