--- a/src/scss/components/_headings.scss
+++ b/src/scss/components/_headings.scss
@@ -59,11 +59,11 @@ h2 {
     line-height: 6.5vw;
   }
 
-  h2 {
+  .post-heading {
     font-size: 1.4rem;
   }
 
-  h3 {
+  .post-heading {
     font-size: 1.1rem;
   }
 }
