--- a/src/scss/components/_post-card.scss
+++ b/src/scss/components/_post-card.scss
@@ -8,7 +8,8 @@
         flex: 2;
         min-height: 7rem;
         margin-bottom:0.5rem;
-       h3 {
+       .post-heading {
+        font-weight: 600;
         position: relative;
         padding-bottom:1rem;
         width: 100%;
