--- a/src/_includes/partials/post-card.html
+++ b/src/_includes/partials/post-card.html
@@ -9,7 +9,7 @@
 
 <div class="post-content">
     <a href="{{ post.url }}" class="post-title-link">
-        <h3 class="post-title">{{ post.data.title }}</h3>
+        <span class="post-title post-heading">{{ post.data.title }}</span>
     </a>
     <div class="post-tags">
         {% for tag in post.data.tags %}
