--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -17,7 +17,7 @@
         <link rel="preload" as="font" type="font/woff2" href="/fonts/Nunito-800-latin15.woff2"/>
 
         <link rel="preload" as="style" media="print" href="/fonts/fonts.css?{{ assetHash }}" onload="this.media='all'"/>
-
+        <base href="/">
         <style>
             {% include "css/critical.css" %}
         </style>
