--- a/src/scss/components/_actionbar.scss
+++ b/src/scss/components/_actionbar.scss
@@ -12,9 +12,10 @@
   background: var(--Secondary);
   color: var(--Text50);
   z-index: 2;
+  overflow: auto;
 
   .actions {
-    margin: 1rem 0;
+    margin: 1.15rem 0;
     display: flex;
     flex-direction: column;
     li {
@@ -39,6 +40,7 @@
       margin-bottom: 1rem;
       font-size:1rem;
       position: relative;
+      margin-top:0.15rem;
 
       &:after {
         content: "";
