--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -9,6 +9,8 @@
     <div slot="observable" class="post-title">
         <h1>{{ title }}</h1>
     </div>
+    {% set tags =  post.tags %}
+    {% include "partials/post-tags.html" %}
     <section class="post-content">
         {{ content | safe }}
     </section>
