--- a/src/_includes/partials/posts.html
+++ b/src/_includes/partials/posts.html
@@ -1,8 +1,11 @@
-{% set postslist = collections.posts | reverse | head(-20) %}
-
 <article class="content post-tiles">
     <div class="sticky-title">
-      <h2>Recent Activity</h2>
+      <h2>
+      <span>{{subtitle}}</span>
+      {% if callToAction %}
+        <a class="call-to-action" href="{{callToAction.href}}">{{callToAction.text}}</a>
+      {% endif %}
+      </h2>
     </div>
 
     <ul class="tiles">
