--- a/src/scss/components/_headings.scss
+++ b/src/scss/components/_headings.scss
@@ -15,10 +15,20 @@ h1 {
 h2 {
   min-width: 11rem;
   position: relative;
-  margin-bottom: 2rem;
   display: block;
   padding-left:0.1rem;
   z-index: 10;
+
+}
+
+.sticky-title {
+  position: sticky;
+  top: $header;
+  margin-left:-3px;
+  background: var(--Background);
+  z-index: 3;
+  padding-bottom: 1rem;
+
   &:after {
     width: 100%;
     content: "";
@@ -27,25 +37,34 @@ h2 {
     height: 0.2rem;
     transform: translateZ(0);
     will-change: transform;
-    clip-path: polygon(0 0,50vw 0, 50vw 100%, 0 100%);
+    clip-path: polygon(0 0,40vw 0, 40vw 100%, 0 100%);
     margin-top: 0.2rem;
     background: var(--Primary);
     transition-delay: 0ms;
     transition: clip-path 0.3s linear;
     
   }
-}
-
-.sticky-title {
-
-  position: sticky;
-  top: $header;
-  margin-left:-3px;
-  background: var(--Background);
 
   h2 {
     background: var(--Background);
-    padding-bottom: 1rem;
+    position: relative;
+    display: flex;
+
+
+    .call-to-action {
+      position: absolute;
+      background: var(--Primary);
+      color: var(--Background);
+      right:0;
+      font-size: 1rem;
+      padding:0.25rem 1.5rem;
+      border-radius: 0.25rem;
+      margin-top:0.5rem;
+      transition: transform 150ms ease-out;
+      &:focus, &:hover {
+        transform: scale(0.98) translateY(0.1rem);
+      }
+    }
   }
 }
 
@@ -77,16 +96,13 @@ h1 {
 .main-content[observable="hidden"] {
   .sticky-title {
     transform: translate(0, 0);
-
+    &:after {
+      clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+    }
     h2 {
       width: 100%;
-      z-index: 5;
-      background: var(--Background);
       margin-bottom: 0;
       transform: translate(0, 2px);
-      &:after {
-        clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
-      }
     }
   }
 
