--- a/src/scss/components/_post-card.scss
+++ b/src/scss/components/_post-card.scss
@@ -3,8 +3,12 @@
 
 .post-card {
   border-radius: 3px;
+  transition: transform 250ms ease-out;
+  &:hover, &:focus {
+    transform: scale(0.98) translateY(0.3rem);
+  }
     .post-title-link {
-        display: inline-flex;
+        display: flex;
         flex: 2;
         min-height: 7rem;
         margin-bottom:0.5rem;
@@ -64,44 +68,13 @@
       }
     }
 
-    .post-tags {
-        flex: 1;
-    }
-
-    .post-tag {
-      display: inline-block;
-      font-weight: 600;
-      font-size: 0.875rem;
-      position: relative;
-      margin-bottom: 0.5rem;
-      margin-right: 1rem;
-
-      &:after {
-        content: "";
-        width: 100%;
-        height: 0.15rem;
-        background: var(--Primary);
-        opacity: 0;
-        transition: opacity 250ms linear;
-        position: absolute;
-        bottom: -2px;
-        left:0;
-      }
-
-      &:hover, &:focus {
-        &:after {
-          opacity: 1;
-        }
-      }
-    }
-
     .post-date {
       font-weight: 600;
       display: flex;
       flex-direction: column;
       align-items: flex-end;
       font-size: 0.875rem;
-      margin-top: 1rem;
+      padding:1rem;
       position: relative;
     }
 
