--- a/src/_includes/partials/posts.html
+++ b/src/_includes/partials/posts.html
@@ -1,5 +1,5 @@
 <article class="content post-tiles">
-    <div class="sticky-title">
+    <div>
       <h2>
       <span>{{subtitle}}</span>
       {% if callToAction %}
