--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -12,7 +12,7 @@
     {% set tags =  post.tags %}
     {% set date =  post.date %}
     {% include "partials/post-tags.html" %}
-    <time class="post-date" datetime="{{ date | htmlDateString }}">{{ date | readableDate }}</time>
+    <time class="post-date" datetime="{{ page.date | htmlDateString }}">{{ page.date | readableDate }}</time>
     <blockquote>{{tagline}}</blockquote>
     <section class="post-content">
         {{ content | safe }}
