--- a/src/scss/components/post.scss
+++ b/src/scss/components/post.scss
@@ -59,6 +59,7 @@ $title-height: 4rem;
                 align-items: center;
                 flex-direction: column;
                 position: relative;
+                border-radius:0.15rem;
                 padding:0.5rem;
                 background: var(--Secondary);
             }
