--- a/src/scss/components/_posts.scss
+++ b/src/scss/components/_posts.scss
@@ -4,6 +4,7 @@ $card-padding: 1rem;
   display: flex;
   flex-direction: column;
   .tiles {
+    margin-top:1.5rem;
     display: grid;
     max-width: 100%;
     display: grid;
