--- a/src/scss/components/post.scss
+++ b/src/scss/components/post.scss
@@ -18,11 +18,11 @@ $title-height: 4rem;
         }
     }
 
-    > p {
+    p {
         margin-bottom: 1rem;
     }
 
-    h3 {
+    h3, h4 {
         margin:0.5rem 0;
     }
 
