post one tweaks

--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -1,5 +1,7 @@
 {% extends "layouts/base.njk" %}
 
+{% set pageCriticalStyles = ['css/blog.css'] %}
+
 {% block content %}
 <div slot="before">
     {% include "partials/post-hero.html" %}
