--- a/src/_includes/partials/header.html
+++ b/src/_includes/partials/header.html
@@ -1,4 +1,6 @@
-<header slot="before" class="site-header">
-    <div class="theme-toggle">{% include "./toggle.html" %}</div>
-    <a href="/" class="logo">{% include "img/logo.svg"%}</a>
+<header slot="before" class="site-wrapper">
+    <div class="site-header">
+        <div class="theme-toggle toggle-mobile">{% include "./toggle.html" %}</div>
+        <a href="/" class="logo">{% include "img/logo.svg"%}</a>
+    </div>
 </header>
