--- a/src/scss/components/_post-card.scss
+++ b/src/scss/components/_post-card.scss
@@ -18,6 +18,7 @@
        .post-heading {
         font-weight: 600;
         width: 100%;
+        font-size: 1.25rem;
        }
        .tagline {
          margin-top:0.5rem;
