--- a/src/_includes/partials/posts.html
+++ b/src/_includes/partials/posts.html
@@ -1,14 +1,60 @@
 <article class="content post-tiles">
-    <div>
       <h2>
       <span>{{subtitle}}</span>
       {% if callToAction %}
         <a class="call-to-action" href="{{callToAction.href}}">{{callToAction.text}}</a>
       {% endif %}
       </h2>
-    </div>
 
     <ul class="tiles">
+        {% for item in postslist %}
+          {% set post = item %}
+        <li class="post-card">
+          {% include "./post-card.html" %}
+        </li>
+        {% endfor %}
+        {% for item in postslist %}
+          {% set post = item %}
+        <li class="post-card">
+          {% include "./post-card.html" %}
+        </li>
+        {% endfor %}
+        {% for item in postslist %}
+          {% set post = item %}
+        <li class="post-card">
+          {% include "./post-card.html" %}
+        </li>
+        {% endfor %}
+        {% for item in postslist %}
+          {% set post = item %}
+        <li class="post-card">
+          {% include "./post-card.html" %}
+        </li>
+        {% endfor %}
+        {% for item in postslist %}
+          {% set post = item %}
+        <li class="post-card">
+          {% include "./post-card.html" %}
+        </li>
+        {% endfor %}
+        {% for item in postslist %}
+          {% set post = item %}
+        <li class="post-card">
+          {% include "./post-card.html" %}
+        </li>
+        {% endfor %}
+        {% for item in postslist %}
+          {% set post = item %}
+        <li class="post-card">
+          {% include "./post-card.html" %}
+        </li>
+        {% endfor %}
+        {% for item in postslist %}
+          {% set post = item %}
+        <li class="post-card">
+          {% include "./post-card.html" %}
+        </li>
+        {% endfor %}
         {% for item in postslist %}
           {% set post = item %}
         <li class="post-card">
