--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,2 +1,7 @@
-$header: 5.3rem;
+$header: 7.3rem;
 $action-bar: 5.3rem;
+
+$desktop-padding:5rem;
+$mid-padding: 5rem;
+$max-post-width: 75em;
+$max-post-large: 90em;
