--- a/src/scss/components/_toggle.scss
+++ b/src/scss/components/_toggle.scss
@@ -5,125 +5,145 @@ $btn-height: 1.2rem;
 $btn-margin: 0.3rem;
 
 .theme-toggle {
-    display: flex;
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  margin-top: 1.5rem;
 }
 
 .toggle-container {
-    border: 0.12rem solid transparent;
-    display: inline-block;
-    width: $width;
-    height: $height;
-    position: relative;
-    cursor: pointer;
-    border-radius: $height;
-    background-color: var(--Primary);
+  border: 0.12rem solid transparent;
+  display: inline-block;
+  width: $width;
+  height: $height;
+  position: relative;
+  cursor: pointer;
+  border-radius: $height;
+  background-color: var(--Primary);
 }
 
-
-
 .toggle-button {
-    &:active  {
-        display: none;
-        &:before {
-            box-shadow: 1px 1px 1px rgba(0,0,0,0.3);
-        }
-    }
-    
-    position: absolute;
-    display: flex;
-    align-items: center;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    margin-left: $btn-margin;
-
-    .toggle-icons {
-        display: flex;
-        height: 100%;
-        width: 100%;
-        align-items: center;
-
-        svg {
-            flex:1;
-            width: 1rem;
-            height: 1rem;
-        }
-
-        svg.moon {
-            width: 1.2rem;
-            height: 1.2rem;
-            margin-left:-.2rem;
-        }
-    }
-
+  &:active {
+    display: none;
     &:before {
-        position: absolute;
-        content: "";
-        height: $btn-height;
-        width: $btn-width;
-        border-radius: 100%;
-        background-color: var(--White);
-        transition: transform .3s ease-in-out;
-        box-shadow: 2px 1px 3px rgba(0,0,0,0.3);
+      box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
     }
+  }
+
+  position: absolute;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin-left: $btn-margin;
+
+  .toggle-icons {
+    display: flex;
+    height: 100%;
+    width: 100%;
+    align-items: center;
+
+    svg {
+      flex: 1;
+      width: 1rem;
+      height: 1rem;
+    }
+
+    svg.moon {
+      width: 1.2rem;
+      height: 1.2rem;
+      margin-left: -0.2rem;
+    }
+  }
+
+  &:before {
+    position: absolute;
+    content: "";
+    height: $btn-height;
+    width: $btn-width;
+    border-radius: 100%;
+    background-color: var(--White);
+    transition: transform 0.3s ease-in-out;
+    box-shadow: 2px 1px 3px rgba(0, 0, 0, 0.3);
+  }
 }
 
 #theme:checked + .wrapper {
-    .toggle-button {
-        &::before{
-         transform: translateX(($width - $btn-width - ($btn-margin * 2)));
-        }   
+  .toggle-button {
+    &::before {
+      transform: translateX(($width - $btn-width - ($btn-margin * 2)));
     }
-    .light {
-        opacity: 0;
-        transition: opacity 250ms linear;
-    }
+  }
+  .light {
+    opacity: 0;
+    transition: opacity 250ms linear;
+  }
 }
 
 #theme:not(:checked) + .wrapper {
-    .dark {
-        opacity: 0;
-        transition: opacity 250ms linear;
-    }
+  .dark {
+    opacity: 0;
+    transition: opacity 250ms linear;
+  }
 }
 
 #theme:focus + .wrapper {
-    .toggle-container {
-        border: 2px solid var(--Text);
+  .toggle-container {
+    border: 2px solid var(--Text);
+  }
+  .toggle-button {
+    &:before {
+      box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
     }
-    .toggle-button {
-        &:before {
-            box-shadow: 1px 1px 1px rgba(0,0,0,0.3);
-        }
-    }
+  }
 }
 html.transition,
 html.transition *,
 html.transition *:before,
 html.transition *:after {
-    transition: background-color 250ms linear,fill 250ms linear !important;
-    transition-delay: 0ms !important;
+  transition: background-color 250ms linear, fill 250ms linear !important;
+  transition-delay: 0ms !important;
 }
 
 /* Remove all animations and transitions for people that prefer not to see them */
 @media (prefers-reduced-motion: reduce) {
-    *, html.transition,
-    html.transition *,
-    html.transition *:before,
-    html.transition *:after {
-      animation-duration: 0.01s !important;
-      animation-iteration-count: 1 !important;
-      transition-duration: 0.01s !important;
-      scroll-behavior: auto !important;
-    }
+  *,
+  html.transition,
+  html.transition *,
+  html.transition *:before,
+  html.transition *:after {
+    animation-duration: 0.01s !important;
+    animation-iteration-count: 1 !important;
+    transition-duration: 0.01s !important;
+    scroll-behavior: auto !important;
   }
+}
 
 #theme:checked + .wrapper {
-    .toggle-button {
-        &::before{
-         transform: translateX(($width - $btn-width - ($btn-margin * 2)) - (0.12rem  * 2));
-        }   
+  .toggle-button {
+    &::before {
+      transform: translateX(
+        ($width - $btn-width - ($btn-margin * 2)) - (0.12rem * 2)
+      );
     }
+  }
+}
+
+.toggle-mobile {
+  display: none;
+}
+@media screen and (max-width: 45em) {
+  .toggle-mobile {
+    display: flex;
+    margin-top: 0;
+    width: auto;
+    height: 3rem;
+    align-items: center;
+  }
+  .toggle-desktop {
+    display: none;
+  }
 }
