--- a/src/scss/components/post.scss
+++ b/src/scss/components/post.scss
@@ -1,16 +1,21 @@
 @import 'variables';
 $title-height: 4rem;
+$date-height: 2rem;
 
 .content {
     display: flex;
     flex-direction: column;
+    margin:0 auto;
 }
 .post {
+    h2 {
+        top: $header + $date-height;
+    }
     > section {
         z-index: 1;
     }
     .post-title {
-        margin: 1rem 0;
+        margin: 2rem 0;
         background: var(--Background);
         h1 {
             position: relative;
@@ -29,6 +34,13 @@ $title-height: 4rem;
     .post-date {
         align-self: flex-end;
         font-size: 0.875rem;
+        position: sticky;
+        top: $header;
+        width: 100%;
+        text-align: right;
+        background: var(--Background);
+        z-index: 12;
+        height: $date-height;
     }
     .post-content {
         background: var(--Background);
@@ -60,7 +72,7 @@ $title-height: 4rem;
                 flex-direction: column;
                 position: relative;
                 border-radius:0.15rem;
-                padding:0.5rem;
+                padding:1rem;
                 background: var(--Secondary);
             }
         }
@@ -70,7 +82,6 @@ $title-height: 4rem;
 .main-content[observable="hidden"] {
     .post-title {
        h1 {
-        width: 100%;
         &:after {
             content: "...";
             position: absolute;
