--- a/src/scss/components/_post-card.scss
+++ b/src/scss/components/_post-card.scss
@@ -36,7 +36,8 @@
       }
     }
     --post-card-height: auto;
-    --post-card-width: 25rem;
+    --post-card-width: 26rem;
+    max-width: 26rem;
     height: var(--post-card-height);
     background: var(--Secondary);
     display: flex;
