--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -38,7 +38,8 @@ html {
 body {
   min-height: 100vh;
   text-rendering: optimizeSpeed;
-  line-height: 1.5;
+  line-height: 1.65;
+  font-size:1.1rem;
 }
 
 /* Remove list styles on ul, ol elements with a class attribute */
