--- a/src/scss/components/_post-card.scss
+++ b/src/scss/components/_post-card.scss
@@ -7,14 +7,23 @@
   &:hover, &:focus {
     transform: scale(0.98) translateY(0.3rem);
   }
+
+  .push {
+    flex:1;
+  }
+  .post-tags {
+    flex:1;
+    position: relative;
+  }
     .post-title-link {
-        display: flex;
-        flex-direction: column;
-        flex: 2;
         min-height: 7rem;
-        margin-bottom:0.5rem;
-        position: relative;
         padding-bottom:1rem;
+        position: relative;
+        > div {
+          display: flex;
+          flex-direction: column;
+          height: 100%;
+        }
        .post-heading {
         font-weight: 600;
         width: 100%;
@@ -22,18 +31,9 @@
        }
        .tagline {
          margin-top:0.5rem;
-         font-size: 0.875rem;
+         font-size: 0.95rem;
          font-style: italic;
        }
-       &:after {
-        content: "";
-        position: absolute;
-        bottom:0;
-        left:0;
-        height: 0.15rem;
-        width: 100%;
-        background: var(--Primary);
-      }
     }
     --post-card-height: auto;
     --post-card-width: 26rem;
@@ -87,9 +87,19 @@
       display: flex;
       flex-direction: column;
       align-items: flex-end;
-      font-size: 0.875rem;
+      font-size: 0.95rem;
       padding:1rem;
       position: relative;
+      &::before {
+        content: "";
+        position: absolute;
+        top:0;
+        left:0;
+        height: 0.15rem;
+        width: 100%;
+        background: var(--Primary);
+  
+      }
     }
 
     .post-content {
