--- a/src/scss/utilities/_visually-hidden.scss
+++ b/src/scss/utilities/_visually-hidden.scss
@@ -5,7 +5,7 @@
   margin: 0;
   overflow: hidden;
   padding: 0;
-  position: absolute;
+  position: fixed;
   width: 1px;
   white-space: nowrap;
 }
