2nd post on colorr

--- a/src/_includes/layouts/archive.njk
+++ b/src/_includes/layouts/archive.njk
@@ -2,7 +2,7 @@
 
 {% extends "layouts/base.njk" %}
 
-{% set postslist = collections.posts %}
+{% set postslist = collections.posts | reverse %}
 
 {% block content %}
    {% include  "partials/posts.html"%}
