--- a/src/scss/components/_post-card.scss
+++ b/src/scss/components/_post-card.scss
@@ -36,8 +36,8 @@
        }
     }
     --post-card-height: auto;
-    --post-card-width: 26rem;
-    max-width: 26rem;
+    --post-card-width: 25rem;
+    max-width: 800px;
     height: var(--post-card-height);
     background: var(--Secondary);
     display: flex;
