--- a/src/_includes/components/youtube.html
+++ b/src/_includes/components/youtube.html
@@ -3,7 +3,7 @@
 <div class="video-size">
     <div class="video-wrapper">
         <lite-youtube class="video" videoid="{{id}}" style="background-image: url('https://i.ytimg.com/vi/{{id}}/hqdefault.jpg');">
-            <a onclick="event.preventDefault()" title="Play Video" class="no-js" target="_blank" href="https://youtube.com?w={{id}}">{% include "img/play.svg" %}</a>
+            <a onclick="('customElements' in window) && event.preventDefault()" title="Play Video" class="no-js" target="_blank" href="https://youtube.com?w={{id}}">{% include "img/play.svg" %}</a>
         </lite-youtube>
     </div>
 </div>
