code viewer tidy

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -31,7 +31,7 @@
         {% endif %}
     </head>
     <body>
-        <input aria-label="Switch theme colors" type="checkbox" id="theme" name="theme" class="visually-hidden">
+        <input aria-label="Switch theme colors" checked type="checkbox" id="theme" name="theme" class="visually-hidden">
         <div class="wrapper page-layout">
             {% include "partials/actionbar.html" %}
             <main id="main-content">
