--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -1,20 +1,20 @@
 /* Dark */
-$dark-bg: #2E4157;
-$dark-bg-50: #3F5671;
-$dark-secondary: #233241;
-$dark-primary: #8AB5EA;
-$dark-primary-50: #7ca3d2;
+$dark-bg: #343434;
+$dark-bg-50: #3f3f3f;
+$dark-secondary: #2b2a2a;
+$dark-primary: #83b4f0;
+$dark-primary-50: #779fcf;
 $dark-text: #F0F0F0;
 $dark-text-50: #DCDCDC;
 $dark-highlight: #FFF;
 /* Light */
 $light-bg:#FDFDFD;
 $light-bg-50:#F5F5F5;
-$light-secondary:#F2F2F2;
+$light-secondary:#f8f8f8;
 $light-primary:#1473E6;
 $light-primary-50:#1267CF;
 $light-text:#233241;
 $light-text-50:#2E4157;
-$light-highlight: #CBCBCB;
+$light-highlight: #e4e3e3;
 
 $white: #f0f0f0;
