--- a/src/scss/blog.scss
+++ b/src/scss/blog.scss
@@ -1,13 +1,11 @@
 @import "./variables";
-@import "../../node_modules/prism-themes/themes/prism-nord.css";
+@import "./syntax/code";
 
-.site-header,
 .content {
   max-width: $max-post-width;
 }
 
 @media screen and (min-width: 3000px) {
-  .site-header,
   .content {
     max-width: $max-post-large;
   }
