--- a/src/scss/components/post.scss
+++ b/src/scss/components/post.scss
@@ -3,14 +3,28 @@ $title-height: 4rem;
 $date-height: 2.2rem;
 
 live-demo {
+    height: 30rem;
     display: flex;
     flex-direction: column;
-    height: 22rem;
-    background: var(--Secondary);
-    padding:1rem;
+    flex:1;
     border-radius: 0.2rem;
+    overflow: auto;
+    background: var(--Secondary);
+    div[contenteditable] {
+        margin:0.5rem;
+        height: 100%;
+        width: 100%;
+        &:focus{
+            outline: none;
+        }
+    }
     pre {
-        background: none !important;
+        &:focus{
+            outline: none;
+        }
+    }
+    pre[class*=language-] {
+        overflow: initial;
     }
     /* potential editing  */
     /*pre {
@@ -25,7 +39,7 @@ live-demo {
 
 /* for fragment scrolling */
 html,body {
-    scroll-padding-top: $header+$date-height + $title-height;
+    scroll-padding-top:$header + $date-height + $title-height;
 }
 
 .content {
@@ -142,5 +156,58 @@ blockquote {
         position: absolute;
         top:0;
         left:-0.5rem;
+    }
+}
+
+.post-hero {
+    position: relative;
+    &:before {
+        content:"";
+        background-image: linear-gradient(to bottom, var(--Background)0%, transparent 20vw,var(--Background) 60vh)
+        , url(/images/ill_back.svg);
+        background-size:111%;
+        background-position:10% 30%;
+        background-repeat: no-repeat;
+        position: absolute;
+        top:0;
+        bottom:0;
+        left:0;
+        right:0;
+        opacity:0.65;
+    }
+}
+
+@media screen and (max-width: 75em) {
+    .post-hero {
+        position: relative;
+        &:before {
+            background-size: 118%;
+            background-repeat: no-repeat;
+            background-position-x: 60%;
+            background-position-y: 0%;
+            background-image: linear-gradient(to bottom, var(--Background) 5%, transparent $header+8rem,var(--Background) 32vw)
+            , url(/images/ill_back.svg);
+        }
+    }
+}
+
+@media screen and (max-width: 45em) {
+    .post-hero {
+        position: relative;
+        &:before {
+            background-size: 118%;
+            background-repeat: no-repeat;
+            background-position-x: 60%;
+            background-position-y:3%;
+            background-image: linear-gradient(to bottom, var(--Background) 11%, transparent 18%,var(--Background) 33vh)
+            , url(/images/ill_back.svg);
+        }
+    }
+}
+
+/* we want light theme a little lighter */
+#theme:checked + .wrapper .post-hero {
+    &:before {
+        opacity:0.05;
     }
 }
