--- a/src/scss/components/_post-card.scss
+++ b/src/scss/components/_post-card.scss
@@ -4,16 +4,19 @@
 .post-card {
   border-radius: 3px;
   transition: transform 250ms ease-out;
+  z-index: 1;
   &:hover, &:focus {
     transform: scale(0.98) translateY(0.3rem);
   }
 
-  .push {
-    flex:1;
-  }
+
   .post-tags {
     flex:1;
     position: relative;
+    display: flex;
+    align-items: flex-end;
+    flex-wrap: wrap;
+
   }
     .post-title-link {
         min-height: 7rem;
@@ -30,7 +33,7 @@
         font-size: 1.25rem;
        }
        .tagline {
-         margin-top:0.5rem;
+         margin-top:1rem;
          font-size: 0.95rem;
          font-style: italic;
        }
@@ -38,24 +41,12 @@
     --post-card-height: auto;
     --post-card-width: 25rem;
     max-width: 800px;
-    height: var(--post-card-height);
+    height: 100%;
     background: var(--Secondary);
     display: flex;
     flex-direction: column;
     overflow: hidden;
     .post-img-link {
-      .overlay {
-        z-index: 1;
-        background: linear-gradient(90deg, $dark-primary 0%, $dark-secondary 100%);
-        width: 100%;
-        height: 100%;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        position: absolute;
-        opacity: 0.1;
-      }
       .post-img {
         height: 11rem;
         width: 100%;
@@ -65,6 +56,8 @@
         img, svg {
           -o-object-fit: cover;
           object-fit: cover;
+          object-position: top;
+          -o-object-position: top;
           width: 100%;
           height: 100%;
           top: 0;
