--- a/src/scss/components/_toggle.scss
+++ b/src/scss/components/_toggle.scss
@@ -4,11 +4,15 @@ $btn-width: 1.2rem;
 $btn-height: 1.2rem;
 $btn-margin: 0.3rem;
 
+.toggle-li {
+  margin-top:auto;
+}
+
 .theme-toggle {
   display: flex;
   width: 100%;
   justify-content: center;
-  margin-top: 1.5rem;
+  margin-bottom: 1rem;
 }
 
 .toggle-container {
