--- a/src/scss/critical.scss
+++ b/src/scss/critical.scss
@@ -13,6 +13,18 @@
 
     --HeroBorders: #{$dark-secondary};
     --HeroWhite: #{$dark-text};
+
+    --code-text: var(--Text);
+    --code-background:transparent;
+    --code-punc: var(--Primary);
+    --code-token: var(--Primary);;
+    --code-boolean: var(--Primary);
+    --code-keyword: var(--Primary);
+    --code-operator: var(--Primary);
+    --code-number: #B48EAD;
+    --code-attr-name: #A3BE8C;
+    --code-attr-value: #88C0D0;
+    --code-regex: #EBCB8B;
 }
 
 html, body {
@@ -41,8 +53,10 @@ html, body {
     flex:1;
     flex-direction: column;
     color: var(--Text);
-    background: var(--Background);
+    background-color: var(--Background);
 }
+
+
 
 #theme:checked + .wrapper, #theme:checked + .wrapper + .filler {
     --Background: #{$light-bg};
@@ -56,6 +70,19 @@ html, body {
 
     --HeroBorders: #{$dark-secondary};
     --HeroWhite: #{$dark-text};
+
+    --code-text: var(--Text);
+    --code-background: transparent;
+    --code-punc: var(--Primary);
+    --code-token: var(--Primary);;
+    --code-boolean: var(--Primary);
+    --code-keyword: var(--Primary);
+    --code-operator: var(--Primary);
+    --code-number: #c616a5;
+    --code-attr-name: #1f780b;
+    --code-attr-value: #3846c0;
+    --code-regex: #644b0e;
+    
 }
 
 a {
