--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -10,7 +10,7 @@ $dark-highlight: #FFF;
 /* Light */
 $light-bg:#FDFDFD;
 $light-bg-50:#F5F5F5;
-$light-secondary:#f8f8f8;
+$light-secondary:#e8e7e7;
 $light-primary:#1473E6;
 $light-primary-50:#1267CF;
 $light-text:#233241;
