--- a/src/_includes/partials/post-hero.html
+++ b/src/_includes/partials/post-hero.html
@@ -2,10 +2,10 @@
 <article class="post-hero">
     <div class="img-wrapper">
         <div aria-hidden="true" class="overlay"></div>
-        {%- if hero.image%}
+    {%- if hero.image and hero.show %}
         <img width="1000" height="420" alt="{{hero and hero.alt or "Default blog image"}}" src="{{ assets.getPostHero(page, hero)}}" class="hero-img"></img>
     {% else %}
-    {% include assets.getPostHero(post, hero) %}
+    {% include assets.getPostHero(post) %}
     {%- endif %}
     </div>
 </article>
