--- a/src/_includes/partials/posts.html
+++ b/src/_includes/partials/posts.html
@@ -1,18 +1,20 @@
 <article class="content post-tiles">
-      <h2>
+  <div class="content-wrap">
+    <h2>
       <span>{{subtitle}}</span>
       {% if callToAction %}
-        <a class="call-to-action" href="{{callToAction.href}}">{{callToAction.text}}</a>
+      <a class="call-to-action" href="{{callToAction.href}}">{{callToAction.text}}</a>
       {% endif %}
-      </h2>
+    </h2>
 
     <ul class="tiles">
-        {% for item in postslist %}
-          {% set post = item %}
-        <li class="post-card">
-          {% include "./post-card.html" %}
-        </li>
-        {% endfor %}
+      {% for item in postslist %}
+      {% set post = item %}
+      <li class="post-card">
+        {% include "./post-card.html" %}
+      </li>
+      {% endfor %}
     </ul>
+  </div>
 
 </article>
