--- a/src/scss/components/_headings.scss
+++ b/src/scss/components/_headings.scss
@@ -92,6 +92,20 @@ h2 {
     font-size: $h1-size-large;
     line-height: 5vw;
   }
+
+  h2 {
+    font-size: calc(#{$h1-size-large} * 0.3);
+    padding-bottom: 3rem;
+    padding:4rem 0;
+    &:after {
+      margin-top: 1rem;
+      height: 0.5rem;
+    }
+  }
+
+  h3 {
+    padding: 1.5rem 0;
+  }
 }
 
 
