--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -61,16 +61,27 @@
     margin: 0;
     width: 100%;
     padding-top: 22.5%;
-    .hero-img, svg {
-      -o-object-fit: cover;
-      object-fit: cover;
-      width: 100%;
-      height: 100%;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      position: absolute;
+  }
+  img, .hero-img, svg {
+    -o-object-fit: cover;
+    object-fit: cover;
+    max-width: $max-post-width;
+    width: 100%;
+    margin: 0 auto;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    position: absolute;
+  }
+}
+
+
+@media screen and (min-width: 3000px) {
+  .post-hero {
+    img, .hero-img, svg {
+      width: $max-post-large;
     }
   }
 }
