--- a/src/scss/components/_posts.scss
+++ b/src/scss/components/_posts.scss
@@ -3,6 +3,7 @@ $card-padding: 1rem;
 .post-tiles {
   display: flex;
   flex-direction: column;
+  width: 100%;
   .tiles {
     margin-top:1.5rem;
     display: grid;
