--- a/src/scss/components/post.scss
+++ b/src/scss/components/post.scss
@@ -45,10 +45,11 @@ html,body {
 .content {
     display: flex;
     flex-direction: column;
-    margin:0 auto;
+    background: var(--Background);
 
 }
 .post {
+    margin: 0 auto;
     h2 {
         top: $header + $date-height;
     }
@@ -107,7 +108,6 @@ html,body {
                 width:100%;
             }
             .img-wrap {
-                width: 100%;
                 display: flex;
                 align-items: center;
                 flex-direction: column;
@@ -174,6 +174,7 @@ blockquote {
         left:0;
         right:0;
         opacity:0.65;
+        background-attachment: fixed;
     }
 }
 
