--- a/src/scss/utilities/_layout.scss
+++ b/src/scss/utilities/_layout.scss
@@ -42,7 +42,14 @@ main {
   }
 }
 .content {
-  padding: 0 var(--site-padding);
+  padding: 0;
+  margin:0;
+  width: min(100% - 2rem, #{$max-post-width});
+  .content-wrap {
+    background: var(--Background);
+    padding: 1rem var(--site-padding);
+    z-index: 1;
+  }
   > section {
     padding-left: 1px;
   }
@@ -56,8 +63,8 @@ main {
   body {
     margin-bottom: $action-bar + 1rem;
   }
-  .content {
-    padding: 0 1rem;
+  .content-wrap {
+    --site-padding:1rem;
   }
   .site-header {
     padding: 1rem;
